# big5chat

./: .env.example  .gitignore  CLAUDE.md  ConstructionPlan.md  README.md  Report_8types_bio20_3lang.md  TestPlan_8types_5scale_bio20.md  TestPlan_8types_matrix.md  pyproject.toml  tasks.md
big5_persona_chat/: .env.example  README.md  example.py  pyproject.toml
big5_persona_chat/src/big5_persona_chat/: __init__.py  chat.py
big5_persona_chat/src/big5_persona_chat/persona/: __init__.py  _user.py  biographies.py  likert.py  markers.py  spec.py
big5_persona_chat/src/big5_persona_chat/prompts/: __init__.py  assembler.py  variants.py
big5_persona_chat/src/big5_persona_chat/prompts/templates/: system_en.jinja  system_ja.jinja
big5_persona_chat/src/big5_persona_chat/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  openai_provider.py
big5_persona_chat/tests/: conftest.py  test_chat.py  test_live_smoke.py  test_persona.py  test_prompts.py  test_providers.py
configs/: experiment_defaults.yaml
configs/personas/: phase0_pilot_32types.yaml  phase0_pilot_4corners.yaml  psychology_8types.yaml
docs/: USAGE_GUIDE.md
scripts/: chat_compare.py  chat_interactive.py  run_8types_bio20.py  run_8types_matrix.py  run_comparison.py  run_pilot_32.py  smoke_test.py
src/big5chat/: __init__.py  cli.py
src/big5chat/analysis/: __init__.py  effect_size.py  reliability.py  report_writer.py  validity.py
src/big5chat/baselines/: __init__.py  mpi.py  personallm.py  prompts.py
src/big5chat/dialogue/: __init__.py  reinjector.py  runner.py
src/big5chat/dialogue/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  openai_provider.py
src/big5chat/evaluation/: __init__.py  bfi.py  expert_rating.py  trait_mcq.py
src/big5chat/evaluation/items/: bfi2_en.json  bfi2_ja.json  bfi2_zh.json  bfi_en.json  bfi_ja.json  bfi_zh.json  interview_qs_ja.json  interview_qs_zh.json  trait_scenarios_ja.json  trait_scenarios_zh.json
src/big5chat/experiments/: __init__.py  config.py  protocol.py
src/big5chat/journal/: __init__.py  jsonl_logger.py
src/big5chat/persona/: __init__.py  biographies.py  likert.py  markers.py  spec.py
src/big5chat/prompts/: __init__.py  assembler.py  postambles.py  variants.py
src/big5chat/prompts/templates/: reinjection_en.jinja  reinjection_ja.jinja  reinjection_zh.jinja  system_zh.jinja
src/big5chat/safety/: __init__.py  constraints.py  moderation.py
tests/: conftest.py  test_baselines.py  test_bfi_pipeline.py  test_effect_size.py  test_journal.py  test_persona.py  test_prompts.py  test_reinjector.py  test_trait_mcq.py  test_zh.py
