[project]
name = "big5_persona_chat"
version = "0.1.0"
description = "Big5 性格付きチャットボット(ゲーム等の対話アプリ向け最小モジュール)"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "jinja2>=3.1",
    "openai>=1.0",
    "anthropic>=0.40",
    "google-genai>=0.3",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/big5_persona_chat"]
